[package]
name = "renvm-bridge"
version = "0.1.0"
authors = ["Edgeware"]
edition = "2018" # 2020 apparently is not supported dk why

# [dependencies]
# codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
# frame-system = { version = "2.0.0", default-features = false }
# frame-support = { version = "2.0.0", default-features = false }
# sp-std = { version = "2.0.0", default-features = false }
# sp-io = { version = "2.0.0", default-features = false }
# sp-core = { version = "2.0.0", default-features = false }
# sp-runtime = { version = "2.0.0", default-features = false }
# pallet-renassets = {path = "../renassets", default-features = false, version = '2.0.0'}
#
# [dev-dependencies]
# hex-literal = { version = "0.3.1" }

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false}
frame-support = { version = "2.0.0", default-features = false}
sp-std = { version = "2.0.0", default-features = false}
sp-io = { version = "2.0.0", default-features = false}
sp-core = { version = "2.0.0", default-features = false}
sp-runtime = { version = "2.0.0", default-features = false}
pallet-assets = {default-features = false, version = '2.0.0'}

[dev-dependencies]
hex-literal = { version = "0.3.1" }


[features]
default = ["std"]
std = [
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-assets/std",
]
